# framework_johannes

./: .gitignore  CMakeLists.txt  GGM_WinoBino_scan.txt  README.md  T5Wg_scan.txt  T5gg_scan.txt  T6Wg_scan.txt  T6gg_scan.txt  config.ini  shape_study.cc  xsec_C1C1_wino.csv  xsec_N2C1_wino.csv  xsec_comb_wino.csv  xsec_gluglu.csv  xsec_sqsq.csv  xsec_wino-bino.csv
notes/: sr_cr.txt
src/: Config.cpp  Dataset.cpp
src/modules/: .danilo_SFapplication.cpp.swp  CMakeLists.txt  SFapplication.cpp  acceptance.cpp  cutflow.cpp  danilo_SFapplication.cpp  danilo_acceptanceHist.cpp  danilo_check_overlap.cpp  danilo_datacards.cpp  danilo_distributions.cpp  danilo_plot_combined.cpp  danilo_signal_scan.cpp  distributions.cpp  efake.cpp  plot_limit.cpp  plot_uncert.cpp  pu.cpp  roofit.cpp  signal_scan.cpp
src/py/: coVariance.py  datacards.py  limits.py  stat_err.py
src/style/: cms_labels.cpp  myStyle.C  tdrstyle.C
src/tools/: gfx.cpp  hist.cpp  hist.hpp  physics.cpp  physics.hpp
